--- a/publication/example/cite.bib
+++ b/publication/example/cite.bib
@@ -1,8 +1,7 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
+@inproceedings{qin_cvprw2022,
+  title={Learning-by-Novel-View-Synthesis for Full-Face Appearance-Based Gaze Estimation},
+  author={Qin, Jiawei and Shimoyama, Takuru and Sugano, Yusuke},
+  booktitle={CVPRW},
+  year={2022},
   organization={IEEE}
 }
